--- a/内存优化经历.md
+++ b/内存优化经历.md
@@ -1,1 +1,17 @@
-内存优化个人经历
+大标题  
+===================================  
+  大标题一般显示工程名,类似html的\<h1\><br />  
+  你只要在标题下面跟上=====即可  
+  
+    
+中标题  
+-----------------------------------  
+  中标题一般显示重点项,类似html的\<h2\><br />  
+  你只要在标题下面输入------即可  
+    
+### 小标题  
+  小标题类似html的\<h3\><br />  
+  小标题的格式如下 ### 小标题<br />  
+  注意#和标题字符中间要有空格  
+  
+### 注意!!!下面所有语法的提示我都先用小标题提醒了!!!  
