--- a/内存优化经验记录.md
+++ b/内存优化经验记录.md
@@ -1,6 +1,7 @@
-内存优化经验记录
-===================================
-1. 不要把queue当做缓冲池！
-------------------------------
-### 哈哈
-###快快快
+###<center>内存优化经验记录<center>
+####1. 不要把queue当做缓冲池
+####2. global queue做消息分发时，尽量减少计算了，特别防止死锁，否则可能导致UI卡死
+####3. 临时变量切记及时释放（autoreleasepool）
+####4. dispatch_async(dispatch_get_main_queue()使用的时候尽量节制
+####5. 过于频繁刷新UI的地方，可考虑定时刷新
+未完待续...
