--- a/内存优化经验记录.md
+++ b/内存优化经验记录.md
@@ -1,7 +1,146 @@
-###<center>内存优化经验记录<center>
-####1. 不要把queue当做缓冲池
-####2. global queue做消息分发时，尽量减少计算了，特别防止死锁，否则可能导致UI卡死
-####3. 临时变量切记及时释放（autoreleasepool）
-####4. dispatch_async(dispatch_get_main_queue()使用的时候尽量节制
-####5. 过于频繁刷新UI的地方，可考虑定时刷新
-未完待续...
+### 直播间消息内存优化历程
+
+这里主要是总结下我在做直播间消息时遇到的问题，以及解决的方案。很多知识点大家都很了解，仅供参考。
+
+#### 直播间消息模块原始架构设计
+```
+graph LR
+    Z[Milink] --> |push消息|A
+    A[消息分发<br>global queue] --> |准备礼物数据|B[礼物模块]
+         B -->|barrageQueue|B1[tableView]
+    A --> |富文本<br>计算行高|C[弹幕模块]
+        C --> |giftQueue|C1[礼物动画]
+    A --> |消息解析|D[观众列表]
+        D --> |queue|D1[刷观众列表]
+    A --> |消息解析|E[红包模块]
+        E --> |redEnvelopQueue|E1[红包]
+    A --> |消息解析|G[房间管理]
+        G --> |queue|G1[刷星票]
+    A --> |消息解析|F[抽奖模块]
+        F --> |queue|F1[抽奖]
+```
+#### 1. 不要把queue当做缓冲池
+GCD的出现使我们很方便的写多线程的代码,dispatch_async中{}的block其实就是一个task，那么**task、queue和thread之间是什么关系。**
+
+    在xcode中运行下面这段简单代码，打断点就能看出端倪。
+    for (NSInteger i = 0; i < 10; i++) {
+        dispatch_async(queue, ^{
+            [NSThread sleepForTimeInterval:60];
+        });
+    }
+
+task会在queue中排队，queue控制task的执行，从后台线程中取可用的线程执行对应的task。那么**当消息量很大task在queue中大量排队会发生什么呢**。
+
+    NSInteger taskCount = 1024 + 1;
+    for (NSInteger i = 0; i < taskCount; i++) {
+        dispatch_async(queue, ^{
+            [NSThread sleepForTimeInterval:60];
+        });
+    }
+    
+**通过demo简单测试,一个简单的task在queue中排队大约占4.3k内存空间。**
+- 空闲没有queue排队时，内存占用4.1MB。
+- 1024个queue排队时，内存占用8.9MB，每个占用(8.4 - 4.1) / 1024 * 1024 = 4.3kb
+- 10240个queue排队时，内存占用46.8MB，每个占用(46.8 - 4.1) / 10240 * 1024 = 4.27kb
+
+**解决方案：模块内加缓冲区，而不是将queue当做缓冲区！**
+
+```
+graph LR
+    Z[Milink] --> |push消息|A
+    A[消息分发<br>global queue] --> |准备礼物数据|B[礼物模块]
+         B -->|pushQueue|B1[缓冲区]
+         B1 -->|popQueue|B2[tableView]
+    A --> |富文本<br>计算行高|C[弹幕模块]
+        C -->|pushQueue|C1[缓冲区]
+        C1 -->|popQueue|C2[播放礼物]
+    A --> |消息解析|D[观众列表]
+        D --> |queue|D1[刷观众列表]
+    A --> |消息解析|E[红包模块]
+        E --> |redEnvelopQueue|E1[红包]
+    A --> |消息解析|G[房间管理]
+        G --> |queue|G1[刷星票]
+    A --> |消息解析|F[抽奖模块]
+        F --> |queue|F1[抽奖]
+```
+
+#### 2. global queue做消息分发时，尽量减少计算量，防止阻塞global queue，特别防止死锁，并行queue阻塞说明可用线程都被占用了，可能导致UI卡死。
+
+**解决方案：给消息分发模块减负，给global queue减负！**
+
+```
+graph LR
+    Z[Milink] --> |push消息|A
+    A[消息分发<br>global queue<br>消息解析] --> B[礼物模块]
+         B -->|pushQueue|B1[缓冲区<br><font color=#ff0000 size=2>丢机制</font>]
+         B1 -->|popQueue<br>礼物数据|B2[tableView]
+    A --> C[弹幕模块]
+        C -->|pushQueue|C1[缓冲区<br><font color=#ff0000 size=2>丢机制</font>]
+        C1 -->|popQueue<br>富文本<br>计算行高|C2[播放礼物]
+    A --> D[观众列表]
+        D --> |queue|D1[刷观众列表]
+    A --> E[红包模块]
+        E --> |redEnvelopQueue|E1[红包]
+    A --> G[房间管理]
+        G --> |queue|G1[刷星票]
+    A --> F[抽奖模块]
+        F --> |queue|F1[抽奖]
+```
+#### 3. 临时变量切记及时释放（autoreleasepool），避免内存峰值
+不要忽视临时变量释放的时机，autorelease延迟释放,对象所属的autoreleasepool释放时执行release。下面这个经典的例子：
+
+    使用autoreleasepool之前，内存会激增
+    while (1) {
+        UIFont *font = [UIFont systemFontOfSize:12];
+    }
+    
+    使用autoreleasepool之后，内存平稳
+    while (1) {
+        @autoreleasepool {
+            UIFont *font = [UIFont systemFontOfSize:12];
+        }
+    }
+    同上计算大概每个UIFont占用空间大概0.5k
+
+直播间弹幕消息构造NSAttributedString时，使用了大量临时变量，虽然没有上面这种大量的循环，当同时需要处理的消息量比较大时，和这个场景还是挺类似的。
+    
+    for (PushMessage *msg in getMessages) {
+        @autoreleasepool {
+            构造显示的NSAttributedString（尽量复用同一个UIFont、UIColor）
+        }
+    }
+#### 4. 过于频繁刷新UI的地方，可考虑定时刷新
+最初直播间里星票数、挂件计数UI刷新时机是完全依赖于消息的触发，这样存在的问题是刷新频率不可控。如果直播间1s内收到上百条需要刷新UI消息，那么刷新上百次是完全没必要的，考虑做聚合，定时刷新，对用户体验影响不是很大。
+
+#### 5. dispatch_async(dispatch_get_main_queue()的使用尽量节制
+- 除了更新UI相关的代码，尽量不要放在主线程中执行。
+- 不要为了解决线程安全问题，就将不安全的对象操作都放到主线程中，造成不必要的主线程负载。
+
+
+```
+graph LR
+    Z[Milink] --> |push消息|A
+    A[消息分发<br>global queue<br>消息解析] --> B[礼物模块]
+         B -->|pushQueue|B1[缓冲区<br><font color=#ff0000 size=2>丢机制</font>]
+         B1 -->|popQueue<br>礼物数据|B2[tableView]
+    A --> C[弹幕模块]
+        C -->|pushQueue|C1[缓冲区<br><font color=#ff0000 size=2>丢机制</font>]
+        C1 -->|popQueue<br>富文本<br>计算行高|C2[播放礼物]
+    A --> D[观众列表]
+        D --> |保存最新数据|D1[定时刷新<br>观众列表]
+    A --> E[红包模块]
+        E --> |redEnvelopQueue|E1[红包]
+    A --> G[房间管理]
+        G --> |保存最新数据|G1[定时刷星票]
+    A --> F[抽奖模块]
+        F --> |queue|F1[抽奖]
+```
+
+总结：
+1. 缓冲池，能处理多少处理多少，先抗住
+2. 预防并行queue的阻塞
+3. 使用较多临时变量时，及时释放
+4. UI刷新过于频繁时考虑定时刷新
+5. 不要随意将任务放到主线程中，积少成多。
+
+**查找问题方法个人总结：排除->怀疑->验证->优化->自测**
